# pollbot

./: .gitignore  Cargo.toml  pollbot.service
src/: apollo_utils.rs  commands.rs  main.rs  tpbot_utils.rs  utils.rs
src/commands/: apollo_get_accepted.rs  apollo_get_no_vote.rs  apollo_get_not_in_voice.rs  apollo_get_tentative.rs  get_accepted.rs  get_no_vote.rs  get_not_in_voice.rs  get_not_voted.rs  get_tentative.rs  lineup.rs  mod.rs  new_poll.rs  steal_emoji.rs  test.rs
