[package]
name = "pollbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "rustls_backend", "model", "temp_cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
